solves issue that the icon was being clipped

--- a/containers.import.less
+++ b/containers.import.less
@@ -352,7 +352,6 @@ body {
                 margin: @defaultMargin 0;// thats what I always use, so we can better control the the spacing, without comming back here. @gridHeight*2 2px 0;
                 color: @colorLink;
                 position: relative;
-                overflow: hidden;
                 text-align: center;
 
                 // ANIMATION
